--- a/cos_pro/my_sol/python_1st_grade_2nd.ipynb
+++ b/cos_pro/my_sol/python_1st_grade_2nd.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
     "    \n",
     "    \n",
     "class ComicBook(Book):                       # class ComicBook(@@@):\n",
-    "    def get_rental_price(Book, day):         #    @@@:\n",
+    "    def get_rental_price(self, day):         #    @@@:\n",
     "        cost = 500\n",
     "        day -= 2\n",
     "        if day > 0:\n",
@@ -91,7 +91,7 @@
     "    \n",
     "    \n",
     "class Novel(Book):                           # class Novel(@@@):\n",
-    "    def get_rental_price(Book, day):         #    @@@:\n",
+    "    def get_rental_price(self, day):         #    @@@:\n",
     "        cost = 1000\n",
     "        day -= 3\n",
     "        if day > 0:\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +227,7 @@
     "# 문제3\n",
     "A 사이트에서 아래 조건에 맞는 게시글을 **최초**로 작성하는 이용자에게 경품을 제공하려 합니다.\n",
     "\n",
+    "#### 경품 당첨 조건\n",
     "* 현재 작성되어있는 가장 마지막 게시글 이후에 작성된 게시글이어야 합니다.\n",
     "* 게시글 번호의 자릿수가 짝수여야 합니다.\n",
     "* 게시글 번호가 2n 자릿수 일때, 앞 n 자리의 각 자릿수의 합과 뒤 n 자리의 각 자릿수의 합이 같아야 합니다.\n",
@@ -403,17 +404,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 1 2 3\n",
-      "9 1 3 5\n",
-      "9 2 3 4\n",
-      "12 3 4 5\n",
       "solution 함수의 반환 값은  4  입니다.\n"
      ]
     }
@@ -426,7 +423,7 @@
     "    #여기에 코드를 작성해주세요.\n",
     "    answer = 0\n",
     "\n",
-    "    #배열에서 세 수를 고르는 방법 고찰,,\n",
+    "    #배열에서 세 수를 고르는 방법 고민,,\n",
     "    for i in range(5):\n",
     "        for j in range(i+1, 5):\n",
     "            for k in range(j+1, 5):\n",
@@ -475,14 +472,26 @@
     "##### 예시 설명\n",
     "숫자 [1, 2, 4, 5]가 들어있는 구간이 숫자가 연속해서 증가하는 가장 긴 구간이며, 길이는 4입니다.\n",
     "\n",
-    "현재 숫자가 바로 이전 숫자와 같은 경우에는 증가했다고 보지 않습니다. [1, 2, 2, 3, 4]가 들어있는 구간은 [2, 2]가 연속해서 증가한 부분이 아니므로, [1, 2]가 들어있는 구간과 [2, 3, 4]가 들어있는 구간으로 나누어야 합니다.\n"
+    "현재 숫자가 바로 이전 숫자와 같은 경우에는 증가했다고 보지 않습니다. [1, 2, 2, 3, 4]가 들어있는 구간은 [2, 2]가 연속해서 증가한 부분이 아니므로, [1, 2]가 들어있는 구간과 [2, 3, 4]가 들어있는 구간으로 나누어야 합니다.\n",
+    "\n",
+    "[1, 2, 2, 3, 4]  \n",
+    "[1, 2]  \n",
+    "[2, 3, 4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 4 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "#다음과 같이 import를 사용할 수 있습니다.\n",
     "#import math\n",
@@ -490,6 +499,16 @@
     "def solution(arr):\n",
     "    #여기에 코드를 작성해주세요.\n",
     "    answer = 0\n",
+    "    count=1\n",
+    "    \n",
+    "    for i in range(1,len(arr)):\n",
+    "        if arr[i-1] < arr[i]:\n",
+    "            count+=1                                #배열에서 직전 값과 비교하여 현재 값이 더 큰 경우, count를 하나씩 증가시킴\n",
+    "        else:\n",
+    "            if count>answer:                        #직전 값보다 현재 값이 작은 경우 count값과 answer값을 비교하여 더 큰 값을 answer에 기록한다.\n",
+    "                answer=count\n",
+    "            count=1\n",
+    "\n",
     "    return answer\n",
     "\n",
     "#아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -542,9 +561,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은  [0, -1]  입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "#다음과 같이 import를 사용할 수 있습니다.\n",
     "#import math\n",
@@ -552,6 +579,15 @@
     "def solution(commands):\n",
     "    # 여기에 코드를 작성해주세요.\n",
     "    answer = []\n",
+    "\n",
+    "    l=commands.count('L')\n",
+    "    r=commands.count('R')\n",
+    "    u=commands.count('U')\n",
+    "    d=commands.count('D')\n",
+    "\n",
+    "    answer.append(r-l)\n",
+    "    answer.append(u-d)\n",
+    "    \n",
     "    return answer\n",
     "\n",
     "#아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -609,18 +645,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 7 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(money):\n",
     "    coin = [10, 50, 100, 500, 1000, 5000, 10000, 50000]\n",
     "    counter = 0\n",
     "    idx = len(coin) - 1\n",
     "    while money:\n",
-    "        counter += @@@\n",
-    "        money %= @@@\n",
-    "        idx -= @@@\n",
+    "        counter += money // coin[idx]                  # counter += @@@ \n",
+    "        money %= coin[idx]                             # money %= @@@\n",
+    "        idx -= 1                                       # idx -= @@@\n",
     "    return counter\n",
     "\n",
     "#아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -679,16 +723,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은  [1, 6, 2, 5, 3, 4]  입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(arr):\n",
     "    left, right = 0, len(arr) - 1\n",
     "    idx = 0\n",
     "    answer = [0 for _ in range(len(arr))]\n",
     "    while left <= right:\n",
-    "        if left % 2 == 0:\n",
+    "        if idx % 2 == 0:                    # 수정전: if left % 2 == 0:\n",
     "            answer[idx] = arr[left]\n",
     "            left += 1\n",
     "        else:\n",
@@ -696,6 +748,7 @@
     "            right -= 1\n",
     "        idx += 1\n",
     "    return answer\n",
+    "\n",
     "\n",
     "#아래는 테스트케이스 출력을 해보기 위한 코드입니다. 아래 코드는 잘못된 부분이 없으니, solution 함수만 수정하세요.\n",
     "arr = [1, 2, 3, 4, 5, 6]\n",
@@ -744,16 +797,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 True 입니다.\n",
+      "solution 함수의 반환 값은 False 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(password):\n",
     "    length = len(password)\n",
     "    for i in range(length - 2):\n",
-    "        first_check = ord(password[i + 1]) - ord(password[i])\n",
-    "        second_check = ord(password[i]) - ord(password[i+1])\n",
-    "        if first_check == second_check and (first_check == 1 or first_check == -1):\n",
+    "        first_check = ord(password[i + 1]) - ord(password[i])                                   #ord():문자를 유니코드로 전환\n",
+    "        second_check = ord(password[i + 2]) - ord(password[i+1])                                #수정전: second_check = ord(password[i]) - ord(password[i+1])\n",
+    "        if first_check == second_check and (first_check == 1 or first_check == -1):             #second check은 first_check에 포함되니까\n",
     "            return False\n",
     "    return True\n",
     "\n",
@@ -804,17 +866,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 101101110 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(s):\n",
     "    s += '#'\n",
     "    answer = \"\"\n",
     "    for i in range(len(s)):\n",
-    "        if s[i] == '0' and s[i + 1] != '0':\n",
+    "        if s[i] == '0' and s[i + 1] != '0': \n",
     "            answer += '0'\n",
-    "        else:\n",
+    "        elif s[i]=='1':                         # 수정 전: else\n",
     "            answer += '1'\n",
     "    return answer\n",
     "\n",
