--- a/cos_pro/my_sol/python_1st_grade_4th.ipynb
+++ b/cos_pro/my_sol/python_1st_grade_4th.ipynb
@@ -48,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은  6  입니다.\n",
+      "solution 함수의 반환 값은  10  입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "words = []\n",
     "\n",
@@ -59,7 +68,7 @@
     "    VOWELS = ['A', 'E', 'I', 'O', 'U']\n",
     "    words.append(s)\n",
     "    for i in range(0, 5):\n",
-    "        if lev < 5:\n",
+    "        if len(s) < 5:                              # if lev < 5:\n",
     "            create_words(lev, s + VOWELS[i])\n",
     "\n",
     "def solution(word):\n",
@@ -131,9 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 y5b9m4 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(s):\n",
     "    s = s.lower()\n",
@@ -146,7 +163,7 @@
     "        else:\n",
     "            answer += previous + str(counter)\n",
     "            counter = 1\n",
-    "            previous = s[0]\n",
+    "            previous = alphabet                     # previous = s[0]\n",
     "    answer += previous + str(counter)\n",
     "    return answer\n",
     "\n",
@@ -219,15 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 17 입니다.\n",
+      "solution 함수의 반환 값은 19 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(one_day_price, multi_day, multi_day_price, n):\n",
     "    if one_day_price * multi_day <= multi_day_price:\n",
     "        return n * one_day_price\n",
     "    else:\n",
-    "        return (n % multi_day) * multi_day_price + (n // multi_day) * one_day_price\n",
+    "        return (n // multi_day) * multi_day_price + (n % multi_day) * one_day_price                 #return (n % multi_day) * multi_day_price + (n // multi_day) * one_day_price\n",
     "        \n",
     "# 아래는 테스트케이스 출력을 해보기 위한 코드입니다. 아래에는 잘못된 부분이 없으니, 위의 코드만 수정하세요.\n",
     "one_day_price1 = 3\n",
@@ -307,9 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은  [4, 1, 4, 2, 4, 8]  입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def func_a(matrix):\n",
     "    n = 4\n",
@@ -355,12 +389,12 @@
     "\n",
     "def solution(matrix):\n",
     "    answer = []\n",
-    "    coords = func_@@@(@@@)\n",
-    "    nums = func_@@@(@@@)\n",
+    "    coords = func_b(matrix)                                  #coords = func_@@@(@@@)\n",
+    "    nums = func_a(matrix)                                    #nums = func_@@@(@@@)\n",
     "\n",
     "    matrix[coords[0][0]][coords[0][1]] = nums[0]\n",
     "    matrix[coords[1][0]][coords[1][1]] = nums[1]\n",
-    "    if func_@@@(@@@):\n",
+    "    if func_c(matrix):                                       #if func_@@@(@@@):\n",
     "        for i in range(0, 2):\n",
     "            answer.append(coords[i][0] + 1)\n",
     "            answer.append(coords[i][1] + 1)\n",
@@ -432,15 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 53124 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def solution(n):\n",
     "    answer = ''\n",
     "    for i in range(n):\n",
-    "        answer += str(@@@)\n",
-    "        answer = answer[@@@]\n",
+    "        answer += str(i+1)                      #answer += str(@@@)\n",
+    "        answer = answer[-1::-1]                    #answer = answer[@@@]\n",
     "    return answer\n",
     "\n",
     "#아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -493,9 +535,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 [153, 370, 371, 407] 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "def power(base, exponent):\n",
     "    val = 1\n",
@@ -510,8 +560,8 @@
     "        current = i\n",
     "        calculated = 0\n",
     "        while current != 0:\n",
-    "            @@@\n",
-    "            @@@\n",
+    "            calculated += (current%10) ** k                                     #@@@\n",
+    "            current //= 10                                                      #@@@\n",
     "        if calculated == i:\n",
     "            answer.append(i)\n",
     "    return answer\n",
@@ -615,9 +665,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 [940, 930, 900] 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "class Unit:\n",
     "    def __init__(self):\n",
@@ -625,32 +683,32 @@
     "    def under_attack(self, damage):\n",
     "        pass\n",
     "\n",
-    "class Monster@@@:\n",
+    "class Monster(Unit):                               # class Monster@@@:\n",
     "    def __init__(self, attack_point):\n",
     "        super().__init__()\n",
     "        self.attack_point = attack_point\n",
-    "    @@@:\n",
+    "    def under_attack(self, damage):                # @@@:\n",
     "        self.HP -= damage\n",
-    "    @@@:\n",
+    "    def attack(self):                              # @@@:\n",
     "        return self.attack_point\n",
     "\n",
-    "class Warrior@@@:\n",
+    "class Warrior(Unit):                               # class Warrior@@@:\n",
     "    def __init__(self, attack_point):\n",
     "        super().__init__()\n",
     "        self.attack_point = attack_point\n",
-    "    @@@:\n",
+    "    def under_attack(self, damage):                # @@@:\n",
     "        self.HP -= damage\n",
-    "    @@@:\n",
+    "    def attack(self):                              # @@@:\n",
     "        return self.attack_point\n",
     "\n",
-    "class Healer@@@:\n",
+    "class Healer(Unit):                                #class Healer@@@:\n",
     "    def __init__(self, healing_point):\n",
     "        super().__init__()\n",
     "        self.healing_point = healing_point\n",
-    "    @@@:\n",
+    "    def under_attack(self, damage):                # @@@:\n",
     "        self.HP -= damage\n",
-    "    @@@:\n",
-    "        unit.HP += self.healing_point\n",
+    "    def healing(self, unit):                       # @@@:\n",
+    "        unit.HP += self.healing_point   \n",
     "\n",
     "\n",
     "def solution(monster_attack_point, warrior_attack_point, healing_point):\n",
@@ -739,10 +797,15 @@
    "source": [
     "# 다음과 같이 import를 사용할 수 있습니다.\n",
     "# import math\n",
+    "# 다시 풀기\n",
     "\n",
     "def solution(card, n):\n",
     "    # 여기에 코드를 작성해주세요.\n",
     "    answer = 0\n",
+    "    \n",
+    "    #카드로 만들 수 있는 모든 경우의 수를 리스트에 담고, 리스트를 오름차순으로 정렬한다.\n",
+    "    card_list=[]\n",
+    "    c1\n",
     "    return answer\n",
     "\n",
     "# 아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -801,15 +864,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은  90.0  입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 다음과 같이 import를 사용할 수 있습니다.\n",
     "# import math\n",
     "\n",
     "def solution(hour, minute):\n",
     "    answer = ''\n",
+    "\n",
+    "    #시침은 시간당 30도, 분당 0.5도씩 돈다.\n",
+    "    #분침은 시간당 360도, 분당 6도씩 돈다.\n",
+    "    hour_angle = hour*30 + minute*0.5\n",
+    "    minute_angle= minute*6\n",
+    "    \n",
+    "    if hour_angle >= minute_angle:\n",
+    "        answer = str(hour_angle-minute_angle)\n",
+    "    else:\n",
+    "        answer = str(minute_angle-hour_angle)\n",
     "    return answer\n",
     "\n",
     "# 아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -867,9 +948,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은 4 입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "#다음과 같이 import를 사용할 수 있습니다.\n",
     "#import math\n",
@@ -877,6 +966,26 @@
     "def solution(a, b):\n",
     "    # 여기에 코드를 작성해주세요.\n",
     "    answer = 0\n",
+    "\n",
+    "    # b이하의 소수를 모두 구한다.\n",
+    "    # 소수의 제곱을 counting, 세제곱을 counting\n",
+    "\n",
+    "    prime=[2]\n",
+    "    for i in range(3,b,2):\n",
+    "        is_prime=True\n",
+    "        for j in range(2, i):\n",
+    "            if i % j == 0:\n",
+    "                is_prime=False\n",
+    "                break\n",
+    "        if is_prime:\n",
+    "            prime.append(i)\n",
+    "    \n",
+    "    for n in prime:\n",
+    "        if a<=n**2 and b>=n**2:\n",
+    "            answer+=1\n",
+    "        if a<=n**3 and b>=n**3:\n",
+    "            answer+=1\n",
+    "\n",
     "    return answer\n",
     "\n",
     "#아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -890,8 +999,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
