--- a/cos_pro/my_sol/python_1st_grade_4th.ipynb
+++ b/cos_pro/my_sol/python_1st_grade_4th.ipynb
@@ -791,21 +791,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solution 함수의 반환 값은  4  입니다.\n",
+      "solution 함수의 반환 값은  -1  입니다.\n"
+     ]
+    }
+   ],
    "source": [
     "# 다음과 같이 import를 사용할 수 있습니다.\n",
     "# import math\n",
+    "\n",
     "# 다시 풀기\n",
+    "import itertools\n",
+    "\n",
+    "def clear_list(card_list):\n",
+    "    card_list=list(map(lambda card: card.replace(', ', ''), card_list))\n",
+    "    card_list=list(map(lambda card: card.replace('(', ''), card_list))\n",
+    "    card_list=list(map(lambda card: card.replace(')', ''), card_list))\n",
+    "    return card_list\n",
     "\n",
     "def solution(card, n):\n",
     "    # 여기에 코드를 작성해주세요.\n",
-    "    answer = 0\n",
+    "\n",
+    "    card_list=list((map(str, itertools.permutations(card))))\n",
+    "    new_card=clear_list(card_list)\n",
     "    \n",
-    "    #카드로 만들 수 있는 모든 경우의 수를 리스트에 담고, 리스트를 오름차순으로 정렬한다.\n",
-    "    card_list=[]\n",
-    "    c1\n",
+    "    new_card=list(map(int, new_card))\n",
+    "    new_card=set(new_card)\n",
+    "    new_card=sorted(list(new_card))\n",
+    "    \n",
+    "    \n",
+    "    if n in new_card:\n",
+    "        answer=new_card.index(n)\n",
+    "    else:\n",
+    "        answer=-1\n",
+    "        \n",
     "    return answer\n",
     "\n",
     "# 아래는 테스트케이스 출력을 해보기 위한 코드입니다.\n",
@@ -822,7 +848,11 @@
     "ret2 = solution(card2, n2)\n",
     "\n",
     "# [실행] 버튼을 누르면 출력 값을 볼 수 있습니다.\n",
-    "print(\"solution 함수의 반환 값은 \", ret2, \" 입니다.\")"
+    "print(\"solution 함수의 반환 값은 \", ret2, \" 입니다.\")\n",
+    "\n",
+    "\n",
+    "# import itertools -> 순열, 조합 등 다양한 함수를 제공한다.\n",
+    "# 순열: itertools.permutation(리스트) -> "
    ]
   },
   {
